[gd_scene load_steps=4 format=3 uid="uid://bpsjrkev4p6or"]

[ext_resource type="Texture2D" uid="uid://b3qmhf7dxduq5" path="res://assets/laser.png" id="1_aca70"]
[ext_resource type="Script" path="res://scripts/laser.gd" id="1_b0w42"]
[ext_resource type="Script" path="res://scripts/raycast.gd" id="3_6rp8i"]

[node name="Laser" type="Node2D"]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_b0w42")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_aca70")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="EndLaser" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-0.39, 3.333)
scale = Vector2(2, 2)
target_position = Vector2(0, -36)
collision_mask = 133
script = ExtResource("3_6rp8i")

[node name="Line2D" type="Line2D" parent="RayCast2D"]
position = Vector2(-0.267, 0)
points = PackedVector2Array(0.39, -47.9997, 0.39, -0.666333)
default_color = Color(0.547556, 0.158775, 0.1243, 1)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer" to="RayCast2D" method="_on_timer_timeout"]
[connection signal="timeout" from="EndLaser" to="RayCast2D" method="_on_end_laser_timeout"]
